--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,18 @@ title: Swostik Shrestha's Resume
 name: Swostik Shrestha
 email: slokk03@gmail.com
 email_full: mailto:slokk03@gmail.com
-website: github.io/sustain
-website_full: https://jekyller.github.io/sustain
-github: trending
-twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
+website: swostik.github.io
+#website_full: https://jekyller.github.io/sustain
+github: https://github.com/Swostik
+twitter: https://twitter.com/slokks
+tel: +358 443601655
+tel_full: tel:++358443601655
 google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
 address:
-  street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
+  street: Emmauksenkatu 7B
+  postcode: 20380
+  city: Turku
+  country: Finland
 google_analytics: UA-69300817-1
 
 # needed for travis-ci build
