corrections to the cv

--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ title: Swostik Shrestha's Resume
 name: Swostik Shrestha
 email: slokk03@gmail.com
 email_full: mailto:slokk03@gmail.com
-website: swostik.github.io
-#website_full: https://jekyller.github.io/sustain
-github: https://github.com/Swostik
-twitter: https://twitter.com/slokks
+website: https://swostik.github.io/
+website_full: 
+github: Swostik
+twitter: slokks
 tel: +358 443601655
 tel_full: tel:++358443601655
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+google_maps: 'https://www.google.fi/maps/place/Turku,+20380+Turku/@60.4758626,22.306656,17z/data=!3m1!4b1!4m5!3m4!1s0x468c769bb197a1b9:0x14feaf073bd1115f!8m2!3d60.475864!4d22.3088474'
 address:
   street: Emmauksenkatu 7B
   postcode: 20380
